ci(workflows): implement all 5 audit improvements [ISSUE-CI-001]
Workflow improvements:
- i18n-validation.yml: Updated baselines 2967231432 (EN/AR)
- eslint-quality.yml: Made lint-scripts-tools blocking with --max-warnings 0
- eslint-quality.yml: Added brand-color-scan job (informational)
- e2e-tests.yml: Added nightly schedule (4 AM UTC) with full browser matrix
- e2e-tests.yml: PRs run smoke subset (4 projects), nightly runs full (5 projects)
- webpack.yml: Raised coverage threshold from 80% to 85%

Scripts lint fixes (64+ errors  0):
- fix-arabic-translations.mjs: Removed 19 duplicate keys
- migrate-encrypt-pii.ts: Fixed any types, parsing error, unused vars
- check-repo-portability.mjs: Fixed unused vars, added eslint-disable for control-regex
- check-hardcoded-uris.mjs: Fixed unnecessary escape chars in regex
- ssot-migrate-v6.mjs: Renamed unused normalizeStatus to _normalizeStatus
- ssot-verify.mjs: Renamed unused get to _get
- verify-prod-env.js: Prefixed unused vars with _
- seedData.js: Prefixed unused tenant vars
- migration scripts: Prefixed unused destructured vars
- generate-openapi-stubs.ts: Fixed no-regex-spaces with {2}

New scripts:
- scan-hex-prod.js: Production-scoped brand color scanner

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -14,6 +14,9 @@ on:
       - 'tests/playwright.config.ts'
       - 'package.json'
       - 'pnpm-lock.yaml'
+  schedule:
+    # Nightly full E2E suite at 4 AM UTC (after quality gates at 2 AM, shuffle at 3:30 AM)
+    - cron: '0 4 * * *'
   workflow_dispatch:
     inputs:
       project:
@@ -24,6 +27,11 @@ on:
         description: 'Specific test file to run (leave empty for all)'
         required: false
         default: ''
+      full_suite:
+        description: 'Run full E2E suite (not just smoke tests)'
+        required: false
+        default: 'false'
+        type: boolean
 
 # Prevent concurrent runs for same PR/ref
 concurrency:
@@ -98,13 +106,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # Run critical smoke tests in parallel
-        # Project names MUST match playwright.config.ts exactly
-        project:
-          - 'Desktop:EN:Admin'       # Matches: Desktop:EN:Admin
-          - 'Desktop:AR:Tenant'      # Matches: Desktop:AR:Tenant
-          - 'Mobile:EN:Technician'   # Mobile Android field ops
-          - 'Mobile:AR:Tenant'       # Mobile iOS self-service
+        # Smoke tests for PRs (fast feedback) - 4 critical role-locale combos
+        # Full suite for nightly schedule - all 5 browser projects
+        # Use workflow_dispatch with full_suite=true for manual full runs
+        project: ${{ (github.event_name == 'schedule' || (github.event_name == 'workflow_dispatch' && github.event.inputs.full_suite == 'true')) && fromJson('["chromium", "firefox", "webkit", "Mobile Chrome", "Mobile Safari"]') || fromJson('["Desktop:EN:Admin", "Desktop:AR:Tenant", "Mobile:EN:Technician", "Mobile:AR:Tenant"]') }}
 
     env:
       NODE_OPTIONS: --max-old-space-size=8192
