--- a/.github/workflows/eslint-quality.yml
+++ b/.github/workflows/eslint-quality.yml
@@ -105,9 +105,8 @@ jobs:
           fi
 
   lint-scripts-tools:
-    name: Lint Scripts & Tools (Non-blocking)
+    name: Lint Scripts & Tools
     runs-on: ubuntu-latest
-    continue-on-error: true
 
     steps:
       - name: Checkout code
@@ -138,15 +137,16 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Run ESLint on scripts and tools (informational)
+      - name: Run ESLint on scripts and tools
         run: |
           mkdir -p _artifacts
-          echo "🔍 Linting scripts and tools (non-blocking)..."
-          pnpm eslint scripts tools --ext .ts,.tsx,.js,.jsx \
+          echo "🔍 Linting scripts and tools (strict mode)..."
+          pnpm eslint scripts tools --ext .ts,.tsx,.js,.jsx,.mjs \
+            --max-warnings 0 \
             --format json \
-            -o _artifacts/eslint-scripts-tools.json || true
+            -o _artifacts/eslint-scripts-tools.json
 
-          echo "⚠️ This job is informational only and does not block CI"
+          echo "✅ Scripts/tools lint passed with 0 errors and 0 warnings"
 
       - name: Upload scripts/tools lint results
         if: always()
@@ -155,6 +155,27 @@ jobs:
           name: eslint-scripts-tools-results
           path: _artifacts/eslint-scripts-tools.json
           retention-days: 30
+
+  brand-color-scan:
+    name: Brand Color Scan (Informational)
+    runs-on: ubuntu-latest
+    continue-on-error: true
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Run brand color scan on production code
+        run: |
+          echo "🎨 Scanning production code for off-palette colors..."
+          node scripts/scan-hex-prod.js
+
+      - name: Summary
+        if: always()
+        run: |
+          echo "📊 Brand color scan completed"
+          echo "   This job is informational and does not block CI"
+          echo "   To make blocking: set BRAND_SCAN_STRICT=true"
 
   security-hardcoded-uris:
     name: Security Scan (Hard-coded URIs)
