--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -107,19 +107,52 @@ jobs:
           - 'Mobile:AR:Tenant'       # Mobile iOS self-service
 
     env:
+      # ============================================================
+      # 🔐 E2E TEST CONFIGURATION (Superadmin-seeded test users)
+      # ============================================================
+      # All test users are seeded by the superadmin. Individual role
+      # credentials are configured in GitHub Secrets but have sensible
+      # defaults for local development.
+      #
+      # CRITICAL: If secrets are missing, tests skip gracefully for forks.
+      # For internal runs, missing secrets cause explicit failures (see validation step).
+      # ============================================================
       NODE_OPTIONS: --max-old-space-size=8192
       PLAYWRIGHT_CONFIG: tests/playwright.config.ts
       PW_WEB_SERVER: pnpm dev -- --hostname 0.0.0.0 --port 3000
       PW_WEB_PORT: 3000
       PLAYWRIGHT_BROWSERS_PATH: 0
-      # 🔐 Auth secrets and QA credentials required by Playwright helpers and qa/config.js
-      NEXTAUTH_SECRET: "${{ secrets.NEXTAUTH_SECRET }}"
-      AUTH_SECRET: "${{ secrets.AUTH_SECRET || secrets.NEXTAUTH_SECRET }}"
-      FIXZIT_TEST_ADMIN_EMAIL: "${{ secrets.FIXZIT_TEST_ADMIN_EMAIL || 'superadmin@fixzit.co' }}"
-      FIXZIT_TEST_ADMIN_PASSWORD: "${{ secrets.FIXZIT_TEST_ADMIN_PASSWORD || secrets.TEST_USER_PASSWORD || secrets.SEED_PASSWORD }}"
-      PUBLIC_ORG_ID: "${{ secrets.PUBLIC_ORG_ID || '000000000000000000000001' }}"
-      DEFAULT_ORG_ID: "${{ secrets.DEFAULT_ORG_ID || '000000000000000000000002' }}"
-      TEST_ORG_ID: "${{ secrets.TEST_ORG_ID || 'test-org-id' }}"
+      # Core auth secrets
+      NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
+      AUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
+      # Test organization (multi-tenancy)
+      PUBLIC_ORG_ID: "000000000000000000000001"
+      DEFAULT_ORG_ID: "000000000000000000000002"
+      TEST_ORG_ID: ${{ secrets.TEST_ORG_ID }}
+      # Superadmin credentials (required)
+      FIXZIT_TEST_ADMIN_EMAIL: ${{ secrets.FIXZIT_TEST_ADMIN_EMAIL }}
+      FIXZIT_TEST_ADMIN_PASSWORD: ${{ secrets.FIXZIT_TEST_ADMIN_PASSWORD }}
+      # RBAC role credentials (seeded by superadmin)
+      TEST_ADMIN_EMAIL: ${{ secrets.TEST_ADMIN_EMAIL }}
+      TEST_ADMIN_PASSWORD: ${{ secrets.TEST_ADMIN_PASSWORD }}
+      TEST_ADMIN_EMPLOYEE: ${{ secrets.TEST_ADMIN_EMPLOYEE }}
+      TEST_FINANCE_OFFICER_EMAIL: ${{ secrets.TEST_FINANCE_OFFICER_EMAIL }}
+      TEST_FINANCE_OFFICER_PASSWORD: ${{ secrets.TEST_FINANCE_OFFICER_PASSWORD }}
+      TEST_FINANCE_OFFICER_EMPLOYEE: ${{ secrets.TEST_FINANCE_OFFICER_EMPLOYEE }}
+      TEST_HR_OFFICER_EMAIL: ${{ secrets.TEST_HR_OFFICER_EMAIL }}
+      TEST_HR_OFFICER_PASSWORD: ${{ secrets.TEST_HR_OFFICER_PASSWORD }}
+      TEST_HR_OFFICER_EMPLOYEE: ${{ secrets.TEST_HR_OFFICER_EMPLOYEE }}
+      TEST_SUPPORT_AGENT_EMAIL: ${{ secrets.TEST_SUPPORT_AGENT_EMAIL }}
+      TEST_SUPPORT_AGENT_PASSWORD: ${{ secrets.TEST_SUPPORT_AGENT_PASSWORD }}
+      TEST_SUPPORT_AGENT_EMPLOYEE: ${{ secrets.TEST_SUPPORT_AGENT_EMPLOYEE }}
+      TEST_SUPPORT_AGENT_USER_ID: ${{ secrets.TEST_SUPPORT_AGENT_USER_ID }}
+      TEST_OPERATIONS_MANAGER_EMAIL: ${{ secrets.TEST_OPERATIONS_MANAGER_EMAIL }}
+      TEST_OPERATIONS_MANAGER_PASSWORD: ${{ secrets.TEST_OPERATIONS_MANAGER_PASSWORD }}
+      TEST_OPERATIONS_MANAGER_EMPLOYEE: ${{ secrets.TEST_OPERATIONS_MANAGER_EMPLOYEE }}
+      TEST_TEAM_MEMBER_EMAIL: ${{ secrets.TEST_TEAM_MEMBER_EMAIL }}
+      TEST_TEAM_MEMBER_PASSWORD: ${{ secrets.TEST_TEAM_MEMBER_PASSWORD }}
+      TEST_TEAM_MEMBER_EMPLOYEE: ${{ secrets.TEST_TEAM_MEMBER_EMPLOYEE }}
+      TEST_TEAM_MEMBER_USER_ID: ${{ secrets.TEST_TEAM_MEMBER_USER_ID }}
 
     steps:
       - name: Set sanitized project name
@@ -172,11 +205,7 @@ jobs:
 
       - name: Regenerate Playwright storage states
         env:
-          NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
-          AUTH_SECRET: ${{ secrets.AUTH_SECRET || secrets.NEXTAUTH_SECRET }}
-          TEST_ORG_ID: ${{ env.TEST_ORG_ID }}
-          DEFAULT_ORG_ID: ${{ env.DEFAULT_ORG_ID }}
-          PUBLIC_ORG_ID: ${{ env.PUBLIC_ORG_ID }}
+          # Runtime overrides only - secrets are inherited from job level
           ALLOW_OFFLINE_MONGODB: "true"
           BASE_URL: "http://localhost:3000"
         run: pnpm tsx tests/setup-auth.ts
@@ -247,53 +276,18 @@ jobs:
 
       - name: Prepare E2E env vars
         if: github.event_name != 'pull_request' || (github.event_name == 'pull_request' && github.event.pull_request.head.repo.fork != true)
-        env:
-          NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
-          GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
-          GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
         run: |
           # This job only runs for internal PRs/branches (forks are handled by e2e-fork-notice)
-          if [ -z "${NEXTAUTH_SECRET}" ]; then
+          # All secrets are defined at job level - just validate NEXTAUTH_SECRET is present
+          if [ -z "$NEXTAUTH_SECRET" ]; then
             echo "::error::Missing NEXTAUTH_SECRET secret. Configure in GitHub Settings > Secrets."
             exit 1
           fi
-          {
-            echo "NEXTAUTH_SECRET=${NEXTAUTH_SECRET}"
-            echo "AUTH_SECRET=${NEXTAUTH_SECRET}"
-            # Google OAuth is optional - set to empty string if not configured
-            echo "GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID:-}"
-            echo "GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET:-}"
-          } >> "$GITHUB_ENV"
+          echo "✅ Core auth secret verified"
 
-      # AUDIT-2025-11-30: Fixed secrets validation
-      # - Added env: block to wire secrets into the step (was missing, causing false negatives)
-      # - Job-level guard already skips forks, but we validate to fail fast on misconfigured CI
-      # NOTE: _EMPLOYEE secrets for non-ADMIN roles are optional (passed through but not required by tests)
-      # AUDIT-2025-12-01: _USER_ID secrets are REQUIRED for scoped roles (TEAM_MEMBER, SUPPORT_AGENT)
+      # Validate required E2E secrets - these are defined at job level, just check they're set
       - name: Validate required E2E secrets (RBAC credentials + tenant org)
         if: github.event_name != 'pull_request' || (github.event_name == 'pull_request' && github.event.pull_request.head.repo.fork != true)
-        env:
-          # Wire secrets into step environment for validation
-          TEST_FINANCE_OFFICER_EMAIL: ${{ secrets.TEST_FINANCE_OFFICER_EMAIL }}
-          TEST_FINANCE_OFFICER_PASSWORD: ${{ secrets.TEST_FINANCE_OFFICER_PASSWORD }}
-          TEST_HR_OFFICER_EMAIL: ${{ secrets.TEST_HR_OFFICER_EMAIL }}
-          TEST_HR_OFFICER_PASSWORD: ${{ secrets.TEST_HR_OFFICER_PASSWORD }}
-          TEST_SUPPORT_AGENT_EMAIL: ${{ secrets.TEST_SUPPORT_AGENT_EMAIL }}
-          TEST_SUPPORT_AGENT_PASSWORD: ${{ secrets.TEST_SUPPORT_AGENT_PASSWORD }}
-          # REQUIRED: MongoDB _id for row-level RBAC assertions
-          TEST_SUPPORT_AGENT_USER_ID: ${{ secrets.TEST_SUPPORT_AGENT_USER_ID }}
-          TEST_OPERATIONS_MANAGER_EMAIL: ${{ secrets.TEST_OPERATIONS_MANAGER_EMAIL }}
-          TEST_OPERATIONS_MANAGER_PASSWORD: ${{ secrets.TEST_OPERATIONS_MANAGER_PASSWORD }}
-          TEST_TEAM_MEMBER_EMAIL: ${{ secrets.TEST_TEAM_MEMBER_EMAIL }}
-          TEST_TEAM_MEMBER_PASSWORD: ${{ secrets.TEST_TEAM_MEMBER_PASSWORD }}
-          # REQUIRED: MongoDB _id for row-level RBAC assertions
-          TEST_TEAM_MEMBER_USER_ID: ${{ secrets.TEST_TEAM_MEMBER_USER_ID }}
-          TEST_ADMIN_EMAIL: ${{ secrets.TEST_ADMIN_EMAIL }}
-          TEST_ADMIN_PASSWORD: ${{ secrets.TEST_ADMIN_PASSWORD }}
-          # Required for employee-number login test in auth.spec.ts
-          # Other _EMPLOYEE secrets are optional (tests skip or use fallbacks)
-          TEST_ADMIN_EMPLOYEE: ${{ secrets.TEST_ADMIN_EMPLOYEE }}
-          TEST_ORG_ID: ${{ secrets.TEST_ORG_ID }}
         run: |
           missing=()
           required_keys=(
@@ -318,16 +312,9 @@ jobs:
 
           echo "✅ All required E2E secrets are configured"
 
-      # AUDIT-2025-11-30: Warn about optional employee secrets that may be needed in the future
-      # These are not currently required by tests, but alerting now prevents late failures
+      # Warn about optional employee secrets
       - name: Check optional employee secrets
         if: github.event_name != 'pull_request' || (github.event_name == 'pull_request' && github.event.pull_request.head.repo.fork != true)
-        env:
-          TEST_FINANCE_OFFICER_EMPLOYEE: ${{ secrets.TEST_FINANCE_OFFICER_EMPLOYEE }}
-          TEST_HR_OFFICER_EMPLOYEE: ${{ secrets.TEST_HR_OFFICER_EMPLOYEE }}
-          TEST_SUPPORT_AGENT_EMPLOYEE: ${{ secrets.TEST_SUPPORT_AGENT_EMPLOYEE }}
-          TEST_OPERATIONS_MANAGER_EMPLOYEE: ${{ secrets.TEST_OPERATIONS_MANAGER_EMPLOYEE }}
-          TEST_TEAM_MEMBER_EMPLOYEE: ${{ secrets.TEST_TEAM_MEMBER_EMPLOYEE }}
         run: |
           missing=()
           for key in TEST_FINANCE_OFFICER_EMPLOYEE TEST_HR_OFFICER_EMPLOYEE TEST_SUPPORT_AGENT_EMPLOYEE TEST_OPERATIONS_MANAGER_EMPLOYEE TEST_TEAM_MEMBER_EMPLOYEE; do
@@ -342,88 +329,23 @@ jobs:
             echo "✅ All optional employee numbers are configured"
           fi
 
-      # AUDIT-2025-11-30: Added fork guard to prevent hard-fail on external PRs
-      # Forked PRs can't access secrets, so E2E tests with RBAC credentials would fail
-      # External contributors still get lint/typecheck/build feedback from other workflows
-      # NOTE: Even though the job has a fork guard, this step-level guard ensures safety
-      # if the job condition is ever relaxed or the step is copied elsewhere.
+      # Run Playwright E2E tests - secrets are inherited from job-level env
       - name: Run Playwright E2E Tests
         if: github.event_name != 'pull_request' || (github.event_name == 'pull_request' && github.event.pull_request.head.repo.fork != true)
         env:
-          # Authentication (NextAuth)
+          # Runtime overrides (not secrets, just test config)
           NEXTAUTH_URL: http://localhost:3000
-          NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
-          AUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
           NEXTAUTH_SKIP_CSRF_CHECK: 'true'
           AUTH_TRUST_HOST: 'true'
-
-          # Disable OTP for E2E tests
           NEXT_PUBLIC_REQUIRE_SMS_OTP: 'false'
           NEXTAUTH_REQUIRE_SMS_OTP: 'false'
-
-          # Google OAuth (from GitHub Secrets - optional)
-          GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
-          GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
-
-          # Database - require real MongoDB for meaningful RBAC/tenancy testing
-          # AUDIT-2025-11-30: Changed from 'true' to 'false' to ensure E2E tests hit real DB
-          # With offline mode enabled, API handlers return empty data, making RBAC/tenancy
-          # checks validate empty payloads - allowing regressions to slip through undetected.
           MONGODB_URI: mongodb://localhost:27017/fixzit_test
           ALLOW_OFFLINE_MONGODB: 'false'
           PLAYWRIGHT_TESTS: 'true'
-
-          # Test environment
           NODE_ENV: test
           CI: 'true'
           SKIP_ENV_VALIDATION: 'true'
-
-          # Base URL
           BASE_URL: http://localhost:3000
-
-          # ============================================================
-          # E2E RBAC Test Credentials (Required for subrole-api-access.spec.ts)
-          # These must be configured in GitHub Settings > Secrets
-          # See env.example for documentation on creating test users
-          #
-          # REQUIRED: email + password for each role
-          # OPTIONAL: _EMPLOYEE secrets (only TEST_ADMIN_EMPLOYEE is required for
-          #           the employee-number login test; others are pass-through)
-          #
-          # AUDIT-2025-12-01: _USER_ID secrets are REQUIRED for scoped roles
-          # (TEAM_MEMBER, SUPPORT_AGENT) to enable row-level RBAC assertions.
-          # Without them, tests pass even if API returns over-broad data.
-          # ============================================================
-          TEST_FINANCE_OFFICER_EMAIL: ${{ secrets.TEST_FINANCE_OFFICER_EMAIL }}
-          TEST_FINANCE_OFFICER_PASSWORD: ${{ secrets.TEST_FINANCE_OFFICER_PASSWORD }}
-          TEST_FINANCE_OFFICER_EMPLOYEE: ${{ secrets.TEST_FINANCE_OFFICER_EMPLOYEE }}
-          TEST_HR_OFFICER_EMAIL: ${{ secrets.TEST_HR_OFFICER_EMAIL }}
-          TEST_HR_OFFICER_PASSWORD: ${{ secrets.TEST_HR_OFFICER_PASSWORD }}
-          TEST_HR_OFFICER_EMPLOYEE: ${{ secrets.TEST_HR_OFFICER_EMPLOYEE }}
-          TEST_SUPPORT_AGENT_EMAIL: ${{ secrets.TEST_SUPPORT_AGENT_EMAIL }}
-          TEST_SUPPORT_AGENT_PASSWORD: ${{ secrets.TEST_SUPPORT_AGENT_PASSWORD }}
-          TEST_SUPPORT_AGENT_EMPLOYEE: ${{ secrets.TEST_SUPPORT_AGENT_EMPLOYEE }}
-          # REQUIRED: MongoDB _id of SUPPORT_AGENT user for row-level RBAC assertions
-          TEST_SUPPORT_AGENT_USER_ID: ${{ secrets.TEST_SUPPORT_AGENT_USER_ID }}
-          TEST_OPERATIONS_MANAGER_EMAIL: ${{ secrets.TEST_OPERATIONS_MANAGER_EMAIL }}
-          TEST_OPERATIONS_MANAGER_PASSWORD: ${{ secrets.TEST_OPERATIONS_MANAGER_PASSWORD }}
-          TEST_OPERATIONS_MANAGER_EMPLOYEE: ${{ secrets.TEST_OPERATIONS_MANAGER_EMPLOYEE }}
-          TEST_TEAM_MEMBER_EMAIL: ${{ secrets.TEST_TEAM_MEMBER_EMAIL }}
-          TEST_TEAM_MEMBER_PASSWORD: ${{ secrets.TEST_TEAM_MEMBER_PASSWORD }}
-          TEST_TEAM_MEMBER_EMPLOYEE: ${{ secrets.TEST_TEAM_MEMBER_EMPLOYEE }}
-          # REQUIRED: MongoDB _id of TEAM_MEMBER user for row-level RBAC assertions
-          TEST_TEAM_MEMBER_USER_ID: ${{ secrets.TEST_TEAM_MEMBER_USER_ID }}
-          TEST_ADMIN_EMAIL: ${{ secrets.TEST_ADMIN_EMAIL }}
-          TEST_ADMIN_PASSWORD: ${{ secrets.TEST_ADMIN_PASSWORD }}
-          # REQUIRED: Used by employee-number login test (auth.spec.ts)
-          TEST_ADMIN_EMPLOYEE: ${{ secrets.TEST_ADMIN_EMPLOYEE }}
-
-          # QA test credentials (aliases for backward compatibility)
-          FIXZIT_TEST_ADMIN_PASSWORD: ${{ secrets.TEST_ADMIN_PASSWORD }}
-          FIXZIT_TEST_ADMIN_EMAIL: ${{ secrets.TEST_ADMIN_EMAIL }}
-
-          # Multi-tenancy validation (org_id scoping for data isolation checks)
-          TEST_ORG_ID: ${{ secrets.TEST_ORG_ID }}
 
         run: |
           project_arg=""
